# FastTowerTestProject

./: fasttower-0.1.4-py3-none-any.whl  manage.py  pyproject.toml  test.sqlite3
TestFastTower/: asgi.py  database.py  routers.py  settings.py
tmpk/: admin.py  config.py  models.py  routers.py  views.py
user/: admin.py  commands.py  config.py  models.py  routers.py  serializers.py  utils.py  views.py
